--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,18 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/factories/ArticleFactory.js"></script>
+    <script src="js/services/ArticleService.js"></script>
     <title>News Summary</title>
   </head>
 
   <body>
     <div ng-controller="NewsSummaryController as controller">
-      <p>{{controller.greeting}}</p>
+      <h2 id='heading'>Todays Headlines for {{controller.today | date}}</h2>
+      <h4 id='articles' ng-repeat='article in controller.articles'>
+        {{article.headline}}
+      </h4>
+
     </div>
   </body>
 </html>
